# Joymania

./: README.md  SCIT_v1.1.2.CT  SCIT_v1.1.3.CT  SCIT_v1.1.CT  SantaClausInTrouble.CT  joymania_xpk.hexpat
Downloads/: README.md
JDToolbox/: CMakeLists.txt  README.md
JDToolbox/src/: check_game.cpp  check_game.h  dllmain.cpp  entrypoint.cpp  game_info.h  gui.cpp  logger.h  utils.cpp  utils.h
JDToolbox/src/dinput8/: dinput8.cpp
SCITHD_Retro_Music/: README.md
XPKTool/: Main.cs  Offsets.cs  README.md  Repack.cs  Unpack.cs  Utils.cs  XPKFile.cs
